--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "15.1.7",
@@ -21,6 +22,7 @@
     "eslint": "^9",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "15.1.7",
+    "husky": "^9.1.7",
     "typescript": "^5"
   }
 }
